fix paste in blog body jump to top

--- a/client/src/styles.css
+++ b/client/src/styles.css
@@ -185,7 +185,7 @@ div:focus {
 
 .editmode #editor {
 	transition: none !important;
-	max-height: 500px;
+	height: 500px;
 	overflow-y: auto;
 }
 
